Fix z-Index Override Issue

--- a/oliviaburton_redesign/cartridges/app_custom_ob_redesign/cartridge/client/default/scss/components/_footer.scss
+++ b/oliviaburton_redesign/cartridges/app_custom_ob_redesign/cartridge/client/default/scss/components/_footer.scss
@@ -510,7 +510,7 @@
             }
         }
 
-        .esw-country-mobile-selector {
+        .selectCountry {
             z-index: 99;
         }
     }
